# ros_mm_arm

./: README.md
ros_mm_arm_controller/launch/: 4x4 mat to tf  controller_moveit.launch
ros_mm_arm_description/urdf/: ros_mm_arm.urdf
ros_mm_arm_developer/: CMakeLists.txt  package.xml
ros_mm_arm_developer/launch/: all_launch.launch  pick_place.launch
ros_mm_arm_developer/src/: myanmar_simple_grasp_client.cpp  myanmar_simple_grasp_server.cpp  test.cpp
ros_mm_arm_moveit_config/launch/: moveit.rviz
ros_mm_arm_vision/: CMakeLists.txt  package.xml
ros_mm_arm_vision/launch/: vision.launch
ros_mm_arm_vision/scripts/: calculate_transform.py  find_obj_parallel.py  find_obj_perspective.py
